# Polymarket-Trading-BTC-ETH-M-Bot

./: .editorconfig  .env.example  Makefile  PRD.md  README.md  V2_MIGRATION.md  pyproject.toml  requirements.txt
config/: default.yaml
src/polybot5m/: __init__.py  cli.py  config.py  constants.py  engine.py  log_setup.py  opposite_bid_history.py  schedule.py  time_utils.py  trading_process_log.py  windows_entry.py
src/polybot5m/backtest/: __init__.py  __main__.py  cli.py  client.py  replay.py  simulation.py
src/polybot5m/data/: __init__.py  chainlink_feed.py  clob_rest.py  clob_user_ws.py  clob_ws.py  gamma.py  models.py  orderbook.py  orderbook_influence.py  polymarket_strike.py  slug_builder.py  strike_price.py  user_channel_store.py
src/polybot5m/execution/: __init__.py  buy_cross_market_slot.py  clob_balances.py  clob_client.py  collateral_adapter.py  ctf_balances.py  data_positions.py  deposit_wallet.py  executor.py  exit_strategy.py  paper_exchange.py  paper_report.py  redeem.py  redeem_scheduler.py  relayer_creds.py  wallet_balance.py
